--- a/Source/Samples/Earthworks_4/CMakeLists.txt
+++ b/Source/Samples/Earthworks_4/CMakeLists.txt
@@ -5,6 +5,12 @@ target_sources(Earthworks_4 PRIVATE
     Earthworks_4.h
     computeShader.cpp
     computeShader.h
+    roads_bezier.cpp
+    roads_bezier.h
+    roads_Intersection.cpp
+    roads_Intersection.h
+    roadNetwork.cpp
+    roadNetwork.h
     terrafector.cpp
     terrafector.h
 	terrain.cpp
@@ -12,36 +18,36 @@ target_sources(Earthworks_4 PRIVATE
 	pixelShader.cpp
     pixelShader.h
 	
-	compute_tileVertices.hlsl
-	compute_bc6h_functions.hlsli
-	gpuLights_defines.hlsli
-	gpuLights_functions.hlsli
-	groundcover_defines.hlsli
-	groundcover_functions.hlsli
-    materials.hlsli
-	terrainDefines.hlsli
-	terrainFunctions.hlsli
-	compute_bc6h.hlsl
-	compute_tileBicubic.hlsl
-	compute_tileBuildLookup.hlsl
-	compute_tileClear.hlsl
-	compute_tileDelaunay.hlsl
-	compute_tileEcotopes.hlsl
-	compute_tileElevationMipmap.hlsl
-	compute_tileGenerate.hlsl
-	compute_tileJumpFlood.hlsl
-	compute_tileNormals.hlsl
-	compute_tilePassthrough.hlsl
-	compute_tileSplitMerge.hlsl
-    compute_terrain_under_mouse.hlsl
+	hlsl/compute_tileVertices.hlsl
+	hlsl/compute_bc6h_functions.hlsli
+	hlsl/gpuLights_defines.hlsli
+	hlsl/gpuLights_functions.hlsli
+	hlsl/groundcover_defines.hlsli
+	hlsl/groundcover_functions.hlsli
+    hlsl/materials.hlsli
+	hlsl/terrainDefines.hlsli
+	hlsl/terrainFunctions.hlsli
+	hlsl/compute_bc6h.hlsl
+	hlsl/compute_tileBicubic.hlsl
+	hlsl/compute_tileBuildLookup.hlsl
+	hlsl/compute_tileClear.hlsl
+	hlsl/compute_tileDelaunay.hlsl
+	hlsl/compute_tileEcotopes.hlsl
+	hlsl/compute_tileElevationMipmap.hlsl
+	hlsl/compute_tileGenerate.hlsl
+	hlsl/compute_tileJumpFlood.hlsl
+	hlsl/compute_tileNormals.hlsl
+	hlsl/compute_tilePassthrough.hlsl
+	hlsl/compute_tileSplitMerge.hlsl
+    hlsl/compute_terrain_under_mouse.hlsl
 
-    render_meshTerrafector.hlsl
-    render_splineTerrafector.hlsl
-    render_spline.hlsl
-    render_Tiles.hlsl
-    render_Common.hlsli
-    PBR.hlsli
-    material.hlsli
+    hlsl/render_meshTerrafector.hlsl
+    hlsl/render_splineTerrafector.hlsl
+    hlsl/render_spline.hlsl
+    hlsl/render_Tiles.hlsl
+    hlsl/render_Common.hlsli
+    hlsl/PBR.hlsli
+    hlsl/material.hlsli
 )
 
 
