Point Grey Flycap

--- a/Source/Samples/Kolskoot/CMakeLists.txt
+++ b/Source/Samples/Kolskoot/CMakeLists.txt
@@ -18,6 +18,8 @@ target_sources(Kolskoot PRIVATE
 
 include_directories("${PROJECT_SOURCE_DIR}/FlyCapture")
 target_link_libraries(Kolskoot PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/FlyCapture/FlyCapture2_v140.lib")
+##target_link_libraries(Kolskoot PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/FlyCapture/FlyCapture2d_v140.lib")
+
 
 
 target_copy_shaders(Kolskoot Samples/Kolskoot)
