--- a/Source/Samples/Earthworks_4/CMakeLists.txt
+++ b/Source/Samples/Earthworks_4/CMakeLists.txt
@@ -60,6 +60,7 @@ target_sources(Earthworks_4 PRIVATE
     hlsl/render_spline.hlsl
     hlsl/render_sprite.hlsl
     hlsl/render_tile_sprite.hlsl
+    hlsl/render_ribbons.hlsl
     hlsl/render_Tiles.hlsl
     hlsl/render_Common.hlsli
     hlsl/PBR.hlsli
