moved glider to own cpp and h files

--- a/Source/Samples/Earthworks_4/CMakeLists.txt
+++ b/Source/Samples/Earthworks_4/CMakeLists.txt
@@ -36,6 +36,8 @@ target_sources(Earthworks_4 PRIVATE
     terrafector.h
 	terrain.cpp
     terrain.h
+    glider.cpp
+    glider.h
 	
 	hlsl/terrain/compute_tileVertices.hlsl
 	hlsl/terrain/compute_bc6h_functions.hlsli
