--- a/Source/Samples/Earthworks_4/CMakeLists.txt
+++ b/Source/Samples/Earthworks_4/CMakeLists.txt
@@ -16,6 +16,7 @@ target_sources(Earthworks_4 PRIVATE
 	pixelShader.cpp
     pixelShader.h
     volumeFogPhaseFunctions.cpp
+    Barrier.hpp
 
     ecotope.h
     ecotope.cpp
