--- a/Source/Samples/Earthworks_4/CMakeLists.txt
+++ b/Source/Samples/Earthworks_4/CMakeLists.txt
@@ -77,6 +77,8 @@ target_sources(Earthworks_4 PRIVATE
     hlsl/terrain/render_ribbons.hlsl
     hlsl/terrain/vegetation_defines.hlsli
     hlsl/terrain/render_vegetation_ribbons.hlsl
+    hlsl/terrain/compute_vegetation_lod.hlsl
+    hlsl/terrain/compute_vegetation_clear.hlsl
     hlsl/terrain/render_thermalRibbons.hlsl
     hlsl/terrain/render_cfdSlice.hlsl
     hlsl/terrain/render_splineTerrafector.hlsl
